<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/record_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">
            <com.fighting.materialmanagementsystem.views.IconFontView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iconfont_record"
                android:textColor="@drawable/selector_textcolor"
                android:textSize="23dp"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/selector_textcolor"
                android:text="记录"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/store_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">
            <com.fighting.materialmanagementsystem.views.IconFontView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iconfont_store"
                android:textSize="23dp"
                android:textColor="@drawable/selector_textcolor"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/selector_textcolor"
                android:text="仓库"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phones_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">
            <com.fighting.materialmanagementsystem.views.IconFontView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iconfont_phones"
                android:textColor="@drawable/selector_textcolor"
                android:textSize="23dp"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/selector_textcolor"
                android:text="通讯录"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/tab_gray"
        android:layout_above="@id/tabs"/>
</RelativeLayout>