<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <com.fighting.materialmanagementsystem.views.IconFontView
                android:id="@+id/if_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_back_bar"
                android:layout_margin="4dp"
                android:paddingLeft="10dp"
                android:textSize="29dp"
                android:gravity="center"
                android:clickable="true"
                android:layout_centerVertical="true"
                android:textColor="#ffffff"
                />

            <com.fighting.materialmanagementsystem.views.IconFontView
                android:id="@+id/if_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_phone"
                android:layout_margin="4dp"
                android:paddingRight="10dp"
                android:textSize="28dp"
                android:clickable="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="#ffffff"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="订单：校运会物资"
                android:layout_toRightOf="@id/if_back"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/toolbar_title_size"
                android:textColor="#ffffff"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingBottom="7dp">

            <include layout="@layout/item_cardview_record"/>

        </RelativeLayout>

        <!--订单详情-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/tab_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.fighting.materialmanagementsystem.views.IconFontView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_tip_littlething"
                    android:textSize="20dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textColor="#000000"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:text="订单详情" />
            </LinearLayout>

            <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="5px"-->
            <!--android:background="@color/my_gap"/>-->
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/tab_gray"/>

            <!--物资清单-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.fighting.materialmanagementsystem.views.IconFontView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_tip_littlething"
                    android:textSize="20dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textColor="#000000"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:text="物资清单" />
            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/tab_gray"/>

            <!--破损物资-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.fighting.materialmanagementsystem.views.IconFontView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_tip_littlething"
                    android:textSize="20dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textColor="#000000"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:text="破损物资" />
            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25dp"
            android:textColor="#ffffff"
            android:text="确        认"
            android:background="#ff562b"/>
    </RelativeLayout>
</RelativeLayout>